<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondogene"
    tools:context=".Acercade">

    <ImageView
        android:id="@+id/img"
        android:layout_width="188dp"
        android:layout_height="156dp"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/Nombre"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombre"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/descripción"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:text="@string/Descripcción"
        android:textColor="@color/black"
        android:textSize="15dp"

        android:fontFamily="sans-serif-condensed-light"
    android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Nombre"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/contactos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingLeft="1dp"
        android:text="@string/Contatos"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripción"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:fontFamily="sans-serif-condensed-light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactos"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:paddingLeft="15dp"

        app:layout_constraintBottom_toTopOf="@+id/celular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email"
        app:layout_constraintVertical_bias="0.100" />

    <TextView
        android:id="@+id/Celular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:paddingLeft="10dp"
        android:text="@string/Celular"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/celular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
       android:textAlignment="center"
        android:text="@string/celular"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Celular"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:textSize="10dp"
        android:backgroundTint="#ff6347"
        android:onClick="salir"
        android:text="@string/salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

</android.support.constraint.ConstraintLayout>